hamidreza_esmailbeyk/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-todo-app
  labels:
    project: todo-app
