hamidreza_esmailbeyk/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-todo-app
spec:
  selector:
    app: todo-app
  type: NodePort 
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
